Added the language template to en.json

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,3 +1,323 @@
 {
-  "Hello": "Hello"
+  "Hello": "Hello",
+  "Amount counted:": "",
+  "Correctly counted:": "",
+  "User was not found in the database.": "",
+  "Incorrectly counted:": "",
+  "See the amount of numbers a user has counted, how many they've gotten wrong and how many right!": "",
+  "Shows the top servers that have counted.": "",
+  "No guilds were found in the database.": "",
+  "The top 10 servers who have counted the most!": "",
+  "Counted {{amount}} times!": "",
+  "See how many numbers the guild has counted!": "",
+  "Counting info about": "",
+  "Numbers counted:": "",
+  "Current number:": "",
+  "{{prefix}}countingchannel to set the counting channel, and start counting!": "",
+  "Balance": "",
+  "Remember, this is just wallet worth, *NOT* net worth.": "",
+  "You can't claim your daily reward yet!": "",
+  "You can claim your next daily reward at: {{time}}": "",
+  "Your daily reward!": "",
+  "You earned": "",
+  "You succeeded!": "",
+  "You evaded to police and laundered": "",
+  "You failed!": "",
+  "You were caught by the police and paid {{fineAmount}} in fines!": "",
+  "See your, or someone else's net worth!": "",
+  "Shows your balance, or someone else's balance.": "",
+  "Claim your daily coins!": "",
+  "Launder money and get up to 100 thousand<:ripcoin:929759319296192543>! But beware, there is a high chance of being caught!": "",
+  "Displays the richest users on the leaderboard.": "",
+  "Top 10 richest people anywhere!": "",
+  "No users were found in the database.": "",
+  "Robs a user.": "",
+  "You robbed yourself!": "",
+  "This user is too poor to be robbed!": "",
+  "Don't beat them while they're down! This person has already been robbed in the past 60 minutes.": "",
+  "{{target}} caught you stealing! You paid them ": "",
+  "You robbed {{target}} and got ": "",
+  "Displays the shop.": "",
+  "Prices are affected by stocks.": "",
+  "Transfer coins from your account to someone else's.": "",
+  "Successfully transferred {{transferAmount}}<:ripcoin:929759319296192543> to {{transferTarget}}. Your remaining balance is: {{senderBalance}}<:ripcoin:929759319296192543>": "",
+  ", you cannot give money to bot accounts.": "",
+  ", that's an invalid amount.": "",
+  "Sorry {{messageAuthor}} you don't have that much.": "",
+  "Please enter an amount greater than zero, {{messageAuthor}}.": "",
+  "Claim your weekly coins!": "",
+  "You can't claim your weekly yet!": "",
+  "You can claim your next weekly reward at:": "",
+  "Your weekly reward!": "",
+  "Says hello to someone!": "",
+  "Hug whoever you'd like to.": "",
+  "hugs": "",
+  "You're making me blush!": "",
+  "Kiss whoever you'd like to.": "",
+  "kisses": "",
+  "Find out your compatibility with other server members!": "",
+  "{{message.author.username}}** and **{{target.username}}** are {{affinity}}% compatible!": "",
+  "Yikes.": "",
+  "That's fantastic!": "",
+  "Pet whoever you'd like to.": "",
+  "pets": "",
+  "Thanks! How did you know I was hankering for a petting?": "",
+  ", how nice of them": "",
+  "Slap whoever you'd like to.": "",
+  "Ouch that hurt!": "",
+  "Maybe dont annoy them next time?!": "",
+  "That's going to leave a mark!": "",
+  "That's going to hurt!": "",
+  "OWIE!!!": "",
+  "Cold..": "",
+  "They deserved it!": "",
+  "Hey!! Don't slap me, what did I do?!": "",
+  "slaps": "",
+  "Play against the computer in a game of blackjack.": "",
+  "🎲You must give a valid bet!🎲": "",
+  "🎲Unfortunately your bet is too large for this game. We can't have you being too successful after all!🎲": "",
+  "🎲You don't have enough money!🎲": "",
+  "You don't have a casino membership. See the {{prefix}}shop to buy it.": "",
+  "Rules of blackjack.": "",
+  "Each participant attempts to beat the dealer by getting a count as close to 21 as possible, without going over 21.\nThe player to the left goes first and must decide whether to \"stand\" (not ask for another card) or \"hit\" (ask for another card in an attempt to get closer to a count of 21, or even hit 21 exactly). Thus, a player may stand on the two cards originally dealt to them, or they may ask the dealer for additional cards, one at a time, until deciding to stand on the total (if it is 21 or under), or goes \"bust\" (if it is over 21). In the latter case, the player loses and the dealer collects the bet wagered. The dealer then turns to the next player to their left and serves them in the same manner.\nWhen the dealer has served every player, the dealers face-down card is turned up. If the total is 17 or more, it must stand. If the total is 16 or under, they must take a card. The dealer must continue to take cards until the total is 17 or more, at which point the dealer must stand. If the dealer has an ace, and counting it as 11 would bring the total to 17 or more (but not over 21), the dealer must count the ace as 11 and stand. The dealer's decisions, then, are automatic on all plays, whereas the player always has the option of taking one or more cards.\nThe maximum bet for this gamemode is 25 million 💰's.": "",
+  "Casino's worth": "",
+  "Flip a coin!": "",
+  "Coinflip": "",
+  "The player calls either heads or tails, the computer then flips a coin. If the player is correct, they gain their bet.": "",
+  "🎲You did not specify your bet! Usage: {{prefix}}coinflip {bet} {heads or tails}🎲": "",
+  "🎲Your bet is either too small, or too large!🎲": "",
+  "I don' think {{userBet}} is a number.": "",
+  "🎲The coin landed on the floor. You didn't call it out!🎲": "",
+  "<:gollar:929765449657352212>The coin has landed!<:gollar:929765449657352212>": "",
+  "It's {{gameResult}}! You were correct!": "",
+  "It's {{gameResult}}! You were incorrect!": "",
+  "Play against the computer in a game of dice.": "",
+  "The player and computer both roll a six sided die. Whichever party rolls a higher number on the die, wins. The maximum bet for this gamemode is 10 million 💰's.": "",
+  "<:gollar:929765449657352212>A game of dice!<:gollar:929765449657352212>": "",
+  "The computer rolls:": "",
+  "You roll:": "",
+  "and": "",
+  "ITS A DRAW! YOU WIN!": "",
+  "DOUBLE SIXES!": "",
+  "YOU WIN!": "",
+  "Shows information on the bot.": "",
+  "Graveyard is a powerful Discord bot, which eliminates the need to fill up your server with an unnecessarily large amount of bots!": "",
+  "Version": "",
+  "Creators": "",
+  "Artists": "",
+  "Tranlators": "",
+  "Made with": "",
+  "Servers": "",
+  "Shows the commands that Graveyard has!": "",
+  "Sends the bot's ping in chat.": "",
+  "See what badges you currently own!": "",
+  "Badge list of: ": "",
+  " has no badges!": "",
+  "Buys an item from the shop.": "",
+  "That item doesn't exist.": "",
+  "You don't have enough <:ripcoin:929759319296192543>": "",
+  "Looks like you've bought a badge! We'll go ahead and apply that for you.": "",
+  "You bought ": "",
+  "Shows your inventory, or someone else's.": "",
+  "Inventory of:": "",
+  " has nothing!": "",
+  "Amount: {{itemAmount}}, Cost: {{itemCost}}<:ripcoin:929759319296192543>": "",
+  "Inventory worth: ": "",
+  "Sell an item from your inventory.": "",
+  "You do not own enough of this item!": "",
+  "You do not own this item!": "",
+  "You sold {{itemAmount}} {{itemName}} for {{itemCostTimesAmount}}": "",
+  "Use an item from your inventory.": "",
+  "It wasn't edible! +0 EXP.": "",
+  "It was decent! +30 EXP.": "",
+  "It was SCRUMPTIOUS! +100 EXP.": "",
+  "You ate the food!": "",
+  "Your new badge has been applied!": "",
+  "Shows the users with the highest levels.": "",
+  "Top 10 Users On This Server": "",
+  "Level": "",
+  "EXP": "",
+  "See your, or someone else's level!": "",
+  "Bots can't be ranked!": "",
+  "{{user}} is level": "",
+  "YOU LOSE!": "",
+  "Unfortunately, this command can only be run in NSFW channels due to some content potentially being NSFW. We are hoping to add a filter soon!": "",
+  "The command {{formattedCommand}} does not exist. Running {{formatBacktick(topCommands[0].string)}}...": "",
+  "The command {{formatBacktick(command)}} does not exist. Did you mean: {{suggestion}}?": "",
+  "The command {{formatBacktick(command)}} does not exist. No similar command was found.": "",
+  "The command {{formatBacktick(command)}} does not exist. Did you mean: {{suggestion}}": "",
+  "You do not have these required permissions in this channel or server: {{missingPermissions}}": "",
+  "You are not a developer!": "",
+  "You are a developer, but you are not in a development server!": "",
+  "I do not have these required permissions in this channel or server: {{missingPermissions}}": "",
+  "We've encountered an error while attempting to execute this command. Please report this error at: https://discord.gg/tkXEhrnXjY": "",
+  "Buy shares from the stock market!": "",
+  "That share doesn't exist.": "",
+  "You don't have enough <:ripcoin:929759319296192543>'s, {{username}}": "",
+  "STOCK NOT AVAILABLE: Share price less than 1.": "",
+  "You bought {{amount}} {{shareName}} shares.": "",
+  "Shows your portfolio.": "",
+  "Target does not exist in the database!": "",
+  "{{username}}'s portfolio!": "",
+  "{{username}} has nothing!": "",
+  "{{shareName}}, Worth: ${currentPrice}<:ripcoin:929759319296192543>": "",
+  "Sell shares from the stock market!": "",
+  "You do not own enough of this share!": "",
+  "You do not own this share!": "",
+  "You sold {{amount}} {{shareName}} for {{price}}<:ripcoin:929759319296192543>!": "",
+  "Displays the stock market!": "",
+  "Stocks!": "",
+  "Yesterday's price: {{oldPrice}}<:ripcoin:929759319296192543>, Current price: {{currentPrice}}<:ripcoin:929759319296192543>, Amount of shares bought: {{amountBought}}, Average change rate: {{averageChange}}%": "",
+  "Get bible verses. Topic is the first argument.": "",
+  "Searches articles on Britannica.": "",
+  "Unfortunately, this definition cannot be shared with you.": "",
+  "No article meeting your search query {{query}} was found on Britannica.": "",
+  "See Graveyard's contact information.": "",
+  "Define the first argument. Optionally include the type of the word (noun, verb, adjective, adverb, etc) as the second argument.": "",
+  "is offensive": "",
+  "No definition found": "",
+  "No definition was found with type {{type}}": "",
+  "Searches for nutritional values for food items, then sends it in the channel.": "",
+  "No food was found.": "",
+  "Geolocates an IP. The IP address should be the first argument.": "",
+  "Please enter a valid IP address.": "",
+  "Searches for videos on the LBRY blockchain/odysee.": "",
+  "No LBRY video was found": "",
+  "Unavailable command": "",
+  "The MP4 command is currently broken. We apologize for the inconvenience.": "",
+  "No MP4 video was found": "",
+  "Getting MP4 file for\n{{title}}\n(this might take some time)...": "",
+  "The MP4 file you requested is too large to send through Discord, so here is the [link]({{url}}).": "",
+  "Here is the MP4 file you requested.": "",
+  "Finds the population of a country, then sends it in the channel.": "",
+  "The world has a population of {{population}} in {{totalCountries}} countries.": "",
+  "{{country}} has a population of {{population}} and ranks #{{ranking}} in the world.": "",
+  "Please provide a valid country.": "",
+  "Reminds you about something.": "",
+  "Reminder: {{reminderMessage}}": "",
+  "{{days}} days": "",
+  "{{hours}} hours": "",
+  "{{minutes}} minutes": "",
+  "{{seconds}} seconds": "",
+  "Set reminder in {{timeString}}": "",
+  "Searches Urban Dictionary for anything you'd like.": "",
+  "Example: {{example}}": "",
+  "By: {{author}}": "",
+  "No definition was found": "",
+  "Searches Wikipedia for anything you'd like.": "",
+  "Definition not found.": "",
+  "Searches for videos on YouTube!": "",
+  "No YouTube video was found.": "",
+  "101 0011 0001 1000 0000 0000 1000": "",
+  "Guess they should've followed the rules.": "",
+  "Ouch! That hurt.": "",
+  "You wont be missed!": "",
+  "Farewell, traveler.": "",
+  "You will be forever missed!": "",
+  "I never really liked that guy.": "",
+  "Kicks a user from the guild.": "",
+  "Incorrect usage. Proper usage, {{prefix}}kick {{user}} reason": "",
+  "The moderators have spoken, {{userTag}} has been kicked from {{guildName}}! ": "",
+  "Kick reason": "",
+  "Moderator": "",
+  "Permanently bans a user from the guild.": "",
+  "Incorrect usage. Proper usage: {{prefix}}permban {{user}} reason": "",
+  "The moderators have spoken, the ban hammer has fallen, {{userTag}} has been banned from {{guildName}}! ": "",
+  "Ban duration": "",
+  "Ban reason": "",
+  "Deletes a specified amount of messages.": "",
+  "Invalid number of messages to delete. Please enter a number.": "",
+  "Deleted {{numberOfMessages}} messages.": "",
+  "YES": "",
+  "NO": "",
+  "Are you sure?": "",
+  "The message you sent is too long, please try again!": "",
+  "There are no categories!": "",
+  "Choose a category:": "",
+  "There are no roles!": "",
+  "Choose a role:": "",
+  "Enter the channel:": "",
+  "Enter the emoji for the role:": "",
+  "Testing for emoji...": "",
+  "\"{{emoji}}\" is not a valid emoji! Please try again!": "",
+  "Enter the discord role:": "",
+  "Enter the name of the role:": "",
+  "Added the role {{formattedRole}}!": "",
+  "Edit the role {{formattedRole}}!": "",
+  "Edit emoji": "",
+  "Rename": "",
+  "Change the discord role": "",
+  "Delete": "",
+  "Finish": "",
+  "Deleted the role!": "",
+  "Finished editing the role.": "",
+  "Edit the category {{categoryName}}:": "",
+  "Add role": "",
+  "Edit role": "",
+  "Edit color": "",
+  "Edit ordering": "",
+  "You cannot have more than 20 roles per category!": "",
+  "Pick a color on {{url}} and copy the hex code:": "",
+  "That is not a valid hex code! It must be in the format `#abcdef`.": "",
+  "How would you like to order the roles?": "",
+  "By the order they were entered (default)": "",
+  "Alphabetically": "",
+  "Enter the name of the category:": "",
+  "Deleted the category!": "",
+  "Finished creating the category.": "",
+  "Created category {{categoryName}}": "",
+  "Hello {{user}}, did you fall asleep?": "",
+  "Hello {{user}}, did you fall asleep? Please run the command again to continue.": "",
+  "Manage self roles": "",
+  "You are setting up self roles!": "",
+  "Here are your options:": "",
+  "Add a category": "",
+  "Edit a category": "",
+  "Finished setting up self roles!": "",
+  "Temporarily bans a user from the guild, for a determined amount of days.": "",
+  "Incorrect usage. Proper usage, {{prefix}}tempban {{user}} time reason": "",
+  "Ban duration is too long.": "",
+  "No ban reason specified.": "",
+  "The moderators have spoken, the ban hammer has fallen, {{userTag} has been banned from {{guildName}}! ": "",
+  "You have been banned from {{guildName}}!": "",
+  "Reason: {{banReason}}": "",
+  "Sets a user in timeout.": "",
+  "You did not specify a target.": "",
+  "You did not specify a time.": "",
+  "Invalid time. Format: 0d0h0m0s. Hours can be between 0 and 23, minutes and seconds between 0 and 60.": "",
+  "The moderators have spoken, the timeout hammer has fallen, {{userTag}} has been timed out in {{guildName}}! ": "",
+  "Timeout duration:": "",
+  "Timeout reason:": "",
+  "No reason provided.": "",
+  "Unbans a user from the guild using userID.": "",
+  "The moderators have spoken, the ban hammer has been lifted, {{userTag}} has been unbanned! ": "",
+  "Unban reason": "",
+  "See information about a specified user.": "",
+  "You did not specify a user.": "",
+  "Shh, bots are private!": "",
+  "Userinfo about {{userTag}}": "",
+  "{{username}}'s badge is:": "",
+  "User does not have a badge.": "",
+  "{{username}}'s balance is:": "",
+  "{{username}} joined at:": "",
+  "{{username}}'s account was created at:": "",
+  "{{username}}'s nickname is:": "",
+  "None": "",
+  "{{username}}'s presence is:": "",
+  "No presence": "",
+  "{{username}}'s role amount is:": "",
+  "Is {{username}} bannable?": "",
+  "Is {{username}} kickable?": "",
+  "Is {{username}} moderatable?": "",
+  "True": "",
+  "False": "",
+  "This was sent in:": "",
+  "{{username}}'s display colour is:'": "",
+  "{{username}}'s display colour in hexadecimal code is:": "",
+  "{{username}}'s id is:": "",
+  "Incorrect Usage": "",
+  "Use {{prefix}}help for more information": "",
+  "Your usage is wrong.": "",
+  "You are missing an argument. The argument can be": "",
+  "{{formattedFailedArg}} is an invalid argument. The argument can be:": ""
 }
