--- a/locales/en.json
+++ b/locales/en.json
@@ -56,7 +56,7 @@
   "Kiss whoever you'd like to.": "",
   "kisses": "",
   "Find out your compatibility with other server members!": "",
-  "{{message.author.username}}** and **{{target.username}}** are {{affinity}}% compatible!": "",
+  "{{authorUsername}} and {{targetUsername}} are {{affinity}}% compatible!": "",
   "Yikes.": "",
   "That's fantastic!": "",
   "Pet whoever you'd like to.": "",
@@ -142,10 +142,10 @@
   "{{user}} is level": "",
   "YOU LOSE!": "",
   "Unfortunately, this command can only be run in NSFW channels due to some content potentially being NSFW. We are hoping to add a filter soon!": "",
-  "The command {{formattedCommand}} does not exist. Running {{formatBacktick(topCommands[0].string)}}...": "",
-  "The command {{formatBacktick(command)}} does not exist. Did you mean: {{suggestion}}?": "",
-  "The command {{formatBacktick(command)}} does not exist. No similar command was found.": "",
-  "The command {{formatBacktick(command)}} does not exist. Did you mean: {{suggestion}}": "",
+  "The command {{formattedCommand}} does not exist. Running {{formattedCommand2}}...": "",
+  "The command {{formattedCommand}} does not exist. Did you mean: {{suggestion}}?": "",
+  "The command {{formattedCommand}} does not exist. No similar command was found.": "",
+  "The command {{formattedCommand}} does not exist. Did you mean: {{suggestion}}": "",
   "You do not have these required permissions in this channel or server: {{missingPermissions}}": "",
   "You are not a developer!": "",
   "You are a developer, but you are not in a development server!": "",
