Add background task locales

--- a/locales/en.json
+++ b/locales/en.json
@@ -319,5 +319,77 @@
   "Use {{prefix}}help for more information": "",
   "Your usage is wrong.": "",
   "You are missing an argument. The argument can be": "",
-  "{{formattedFailedArg}} is an invalid argument. The argument can be:": ""
+  "{{formattedFailedArg}} is an invalid argument. The argument can be:": "",
+  "{{username}} has reached level {{level}}!": "",
+  "{{requiredExp}} EXP until the next level.": "",
+  "For leveling up you earned {{coins}} RIP coin!": "",
+  "{{user}} was banned from {{guild}} but the reason and executor are unknown.": "",
+  "User {{username}} was banned from {{guildName}}.": "",
+  "Reason for ban:": "",
+  "No reason provided": "",
+  "Banned by {{executor}}": "",
+  "Reason for ban: Undefined": "",
+  "{{executorTag}} created a channel.": "",
+  "Channel name:": "",
+  "Channel type:": "",
+  "Created at:": "",
+  "{{executorTag}} deleted a channel.": "",
+  "{{user}} ruined counting at {{number}}!\nCounting starts at 1.": "",
+  "Event does not have a defined length.": "",
+  "{{username}} created an event.": "",
+  "Event name:": "",
+  "Event does not have a name.": "",
+  "Not in a channel.": "",
+  "Event description:": "",
+  "No description provided.": "",
+  "Privacy level:": "",
+  "Privacy level non-existant.": "",
+  "Event URL:": "",
+  "No url.": "",
+  "Event status:": "",
+  "No status found.": "",
+  "Starts at:": "",
+  "Event never started.": "",
+  "Event duration in hours:": "",
+  "{{username}} deleted an event.": "",
+  "Channel:": "",
+  "Was not in a channel.": "",
+  "User {{displayName}} was kicked from {{guildName}}.": "",
+  "Reason for kick:": "",
+  "Kicked by {{executor}}": "",
+  "{{userTag}} edited a message.": "",
+  "Original message:": "",
+  "This message is either integrated or an embed.": "",
+  "Updated message:": "",
+  "A message was deleted.": "",
+  "Message author:": "",
+  "Content": "",
+  "My prefix here is {{prefix}}": "",
+  "Suggestion:": "",
+  "Hope you enjoy your stay!": "",
+  "Have fun!": "",
+  "HELLO FRIEND.": "",
+  "Greetings stranger!": "",
+  "I like the cut of your jib.": "",
+  "You behave now!": "",
+  "Better behave or you'll be punished.": "",
+  "Welcome {{user}} to {{guildName}}. {{funnyReply}}": "",
+  "Au revouirar! Or something along those lines.": "",
+  "Goodbye!": "",
+  "BYE!!": "",
+  "It's sad to see you go!": "",
+  "They sucked!": "",
+  "Hope you enjoyed your stay!": "",
+  "Come back soon!": "",
+  "{{user}} left {{guildName}}. {{funnyReply}}": "",
+  "yes": "",
+  "Say 'yes' if you agree with the rules, and get verified!": "",
+  "Verify channel was setup. Edit the role to give using the config command, and manually edit the roles.": "",
+  "Set value {{value}} to {{{newConfig}}": "",
+  "The value {{value}} doesn't exist": "",
+  "not defined": "",
+  "Configs for {{guildName}}": "",
+  "Uh oh! Something went wrong :(": "",
+  "Reset value {{value}}.": "",
+  "Options are:": ""
 }
